--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<html><body>OK</body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>CheckScam — Проверка сайтов и контактов на мошенничество</title>
+    <style>
+        body { font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6; }
+        h1 { color: #222; }
+        h2 { margin-top: 30px; }
+    </style>
+</head>
+<body>
+
+<h1>CheckScam</h1>
+<p>CheckScam — это сервис проверки сайтов, номеров телефонов, доменов, IP-адресов и социальных сетей на признаки мошенничества. Мы анализируем репутацию ресурса, технические параметры, отзывы и другие факторы риска.</p>
+
+<h2>Наши услуги</h2>
+<ul>
+    <li><b>Автоматическая проверка</b> — анализ через Telegram-бота.</li>
+    <li><b>Premium-Check</b> — экспертная ручная проверка ресурса с подробным отчётом.</li>
+</ul>
+
+<h2>Premium-Check</h2>
+<p>Premium-Check — это услуга углублённого анализа сайта или контакта.  
+Эксперт вручную проверяет владельцев, отзывы, историю домена, связанные проекты, угрозы, наличие фишинга и другие признаки риска.  
+После оплаты вы получаете детальный отчёт, включающий вывод: является ли ресурс безопасным.</p>
+
+<h2>Контакты</h2>
+<p>Email: <a href="mailto:pudge20151@gmail.com">checkscam.support@gmail.com</a></p>
+<p>Telegram: <a href="https://t.me/ScamCheckCannel">@CheckScamBot</a></p>
+
+</body>
+</html>
