--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 После оплаты вы получаете детальный отчёт, включающий вывод: является ли ресурс безопасным.</p>
 
 <h2>Контакты</h2>
-<p>Email: <a href="mailto:pudge20151@gmail.com">checkscam.support@gmail.com</a></p>
-<p>Telegram: <a href="https://t.me/ScamCheckCannel">@CheckScamBot</a></p>
+<p>Email: <a href="mailto:checkscam.support@gmail.com">checkscam.support@gmail.com</a></p>
+<p>Telegram: <a href="https://t.me/CheckScamBot">@CheckScamBot</a></p>
 
 </body>
 </html>
