--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
 <h1>CheckScam</h1>
-<p>CheckScam — это сервис проверки сайтов, номеров телефонов, доменов, IP-адресов и социальных сетей на признаки мошенничества. Мы анализируем репутацию ресурса, технические параметры, отзывы и другие факторы риска.</p>
+<p>CheckScam — это сервис проверки сайтов, номеров телефонов, доменов, IP-адресов и социальных сетей на признаки мошенничества. 
+Мы анализируем репутацию ресурса, технические параметры, отзывы и другие факторы риска.</p>
 
 <h2>Наши услуги</h2>
 <ul>
@@ -21,13 +22,14 @@
 </ul>
 
 <h2>Premium-Check</h2>
-<p>Premium-Check — это услуга углублённого анализа сайта или контакта.  
-Эксперт вручную проверяет владельцев, отзывы, историю домена, связанные проекты, угрозы, наличие фишинга и другие признаки риска.  
+<p>Premium-Check — это услуга углублённого анализа сайта или контакта. Эксперт вручную проверяет владельцев, отзывы, историю домена, связанные проекты, угрозы, наличие фишинга и другие признаки риска. 
 После оплаты вы получаете детальный отчёт, включающий вывод: является ли ресурс безопасным.</p>
 
 <h2>Контакты</h2>
 <p>Email: <a href="mailto:pudge20151@gmail.com">pudge20151@gmail.com</a></p>
-<p>Telegram: <a href="https://t.me/ScamCheckCannel">@ScamCheckCannel</a></p>
+
+<p>Telegram канал: <a href="https://t.me/ScamCheckCannel">@ScamCheckCannel</a></p>
+<p>Telegram (личные сообщения): <a href="https://t.me/zhelydok">@zhelydok</a></p>
 
 </body>
 </html>
